Change footer copyright to Mukesh P
Updated copyright notice in footer.

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
     </div>
 </section>
 <footer>
-    <p class="copyright">&copy; Designed by Aravinth T</p>
+    <p class="copyright">&copy; Designed by Mukesh P</p>
 </footer>
 
 <script src="script.js"></script>
 </body>
 </html>
+
